<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Circle Bot</string>
    <!--activity_main.xml-->
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="label_connected_bluetooth">No Device Connected</string>
    <string name="btn_bluetooth">Bluetooth</string>
    <string name="label_vacuum">Vacuum</string>
    <string name="label_auto">Auto</string>
    <string name="btn_auto_off">Turn Off</string>
    <string name="label_auto_time">00:00:00</string>
    <string name="btn_auto_time">Auto Time</string>
    <!--dialog_bluetooth.xml-->
    <string name="title_dialog_bluetooth">Select Device to Connect</string>
    <string name="label_paired">Paired Devices</string>
    <string name="label_available">Available Devices</string>
    <string name="btn_scan">Scan</string>
    <!--dialog_automate.xml-->
    <string name="title_dialog_auto">Auto Clean Time</string>
    <string name="label_input_time">Please Input Auto Clean Time</string>
    <string name="hint_input_time">Input Auto Time...</string>
    <string name="label_time">Minutes</string>
    <string name="btn_send">Send</string>
</resources>
