<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/toolbar_dialog_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0A3D91"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_dialog_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_dialog_auto"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/label_input_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_dialog_auto"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_input_time"
        android:textColor="#0A3D91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_dialog_auto" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_input_time"
        android:layout_marginTop="16dp"
        android:paddingLeft="-4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/label_input_time"
        app:layout_constraintTop_toBottomOf="@+id/label_input_time">

        <EditText
            android:id="@+id/input_time"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_time"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/label_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time"
            android:textColor="#0A3D91" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_send"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_input_time"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_send"
        app:backgroundTint="#0A3D91"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
